--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,11 +24,12 @@ jobs:
           restore-keys: |
             ${{runner.os}}-gradle-
 
-      - name: Setup JDK 11
+      - name: Setup JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: "zulu"
-          java-version: 17
+          distribution: "temurin"
+          java-version: "17"
+          cache: gradle
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v2
